KFSMI-3411 - added institutional spring bean property to load the testing batch jobs and steps which have been removed from the default Spring files
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cfg-envs/trunk@5565 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kfs/build.properties
+++ b/kfs/build.properties
@@ -1,9 +1,15 @@
 mail.relay.server=mail-relay.iu.edu
 batch.mailing.list=kbatch-l@indiana.edu
 incident.mailing.list=kincident-l@indiana.edu
-do.filter.project.help
+do.filter.project.help=
+# there's no need to filter the Spring IDE files.  We're not running eclipse here.
+dont.filter.project.spring.ide=
 dist.external=true
 custom.context.content=<Manager className="org.apache.catalina.session.StandardManager" maxActiveSessions="250" />
 
+# ensure that the local support servers are not deployed
 deploy.local.rice.server=false
 deploy.local.cas.server=false
+
+# include the testing beans which auto-generate various items for testers
+institution.spring.source.files=,spring-test-env-beans.xml
