KFSMI-3411 - added quartz properties so developer defaults can be changed
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cfg-envs/trunk@5566 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kfs/build.properties
+++ b/kfs/build.properties
@@ -13,3 +13,7 @@ deploy.local.cas.server=false
 
 # include the testing beans which auto-generate various items for testers
 institution.spring.source.files=,spring-test-env-beans.xml
+
+# ensure quartz scheduling set as expected
+batch.schedule.cron.expression=00 00 23 ? * *
+use.quartz.scheduling=true
