--- a/kfs/build.properties
+++ b/kfs/build.properties
@@ -17,3 +17,5 @@ institution.spring.source.files=,spring-test-env-beans.xml
 # ensure quartz scheduling set as expected
 batch.schedule.cron.expression=00 00 23 ? * *
 use.quartz.scheduling=true
+
+email.reminder.lifecycle.enabled=true
