changed property name
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cfg-envs/trunk@5575 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kfs/build.properties
+++ b/kfs/build.properties
@@ -18,4 +18,4 @@ institution.spring.source.files=,spring-test-env-beans.xml
 batch.schedule.cron.expression=00 00 23 ? * *
 use.quartz.scheduling=true
 
-email.reminder.lifecycle.enabled=true
+rice.kew.email.reminder.lifecycle.enabled=true
