git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cfg-envs/trunk@5579 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kfs/build.properties
+++ b/kfs/build.properties
@@ -5,7 +5,7 @@ do.filter.project.help=
 # there's no need to filter the Spring IDE files.  We're not running eclipse here.
 dont.filter.project.spring.ide=
 dist.external=true
-custom.context.content=<Manager className="org.apache.catalina.session.StandardManager" maxActiveSessions="250" />
+custom.context.content=
 
 # ensure that the local support servers are not deployed
 deploy.local.rice.server=false
