--- a/kfs/build.properties
+++ b/kfs/build.properties
@@ -19,3 +19,4 @@ batch.schedule.cron.expression=00 00 23 ? * *
 use.quartz.scheduling=true
 
 rice.kew.email.reminder.lifecycle.enabled=true
+rice.enable.nonproduction.data.unmasking=true
