--- a/impex/build.properties
+++ b/impex/build.properties
@@ -77,7 +77,7 @@ torque.project = kfs
 
 #import.admin.user=
 #import.admin.password=
-import.admin.url = jdbc:mysql://localhost:3306/
+#import.admin.url = jdbc:mysql://localhost:3306/
 
 torque.sameJavaName = false
 torque.useClasspath=true
