Updates to allow filtering of the tables exported.
git-svn-id: https://svn.kuali.org/repos/foundation/db-utils/branches/export-filter@7144 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/impex/build.properties
+++ b/impex/build.properties
@@ -67,6 +67,9 @@ torque.project = kfs
 #export.torque.database.schema=KULDBA
 #export.torque.database.password=kuldba
 
+#import.exclude.data.pattern=
+export.excluded.tables=
+export.start.table=
 
 #import.torque.database = mysql
 #import.torque.database.driver = com.mysql.jdbc.Driver
