added echo for debugging
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cfg-envs/trunk@5609 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/build.xml
+++ b/build.xml
@@ -18,14 +18,15 @@
 	</target>
 	
 	<target name="init-mysql-properties" depends="init-base-properties" if="import.into.mysql">
+		<echo message="mysql.impex.properties.file: ${mysql.impex.properties.file}"/>	
 		<property file="${mysql.impex.properties.file}" />
 	</target>
 
 	<target name="init-properties" depends="init-mysql-properties">
 		<property file="${oracle.impex.properties.file}" />
 		<loadfile property="impex-build.properties" srcfile="${impex.properties.file.template}"><filterchain><expandproperties /></filterchain></loadfile>
-		<delete file="${impex.properties.file}" />
 		<echo message="${impex-build.properties}" file="${impex.properties.file}" />
+		<delete file="${impex.properties.file}" />
 	</target>
 	
 	<target name="export" depends="init-properties">
