git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cfg-envs/trunk@5611 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/build.xml
+++ b/build.xml
@@ -26,7 +26,7 @@
 		<loadfile property="impex-build.properties" srcfile="${impex.properties.file.template}"><filterchain><expandproperties /></filterchain></loadfile>
 		<delete file="${impex.properties.file}" />
 		<echo message="${impex-build.properties}" file="${impex.properties.file}" />
-		<echoproperies/>
+		<echoproperties/>
 	</target>
 	
 	<target name="export" depends="init-properties">
