Added use.dd.schema.validation=true to build.properties
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cfg-envs/trunk@5615 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kfs/build.properties
+++ b/kfs/build.properties
@@ -20,3 +20,5 @@ use.quartz.scheduling=true
 
 rice.kew.email.reminder.lifecycle.enabled=true
 rice.enable.nonproduction.data.unmasking=true
+
+use.dd.schema.validation=true
