KULRICE-3899: Added some distro stuff that we probably wont use, but is good to have
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/modified/xapool-1.5.0/trunk@7019 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/pom.xml
+++ b/pom.xml
@@ -4,4 +4,17 @@
   <artifactId>xapool</artifactId>
   <version>1.5.0-patch3</version>
   <description>this is rice modified xapool</description>
+  
+  <scm>
+		<connection>scm:svn:https://test.kuali.org/svn/modified_source/xapool-1.5.0/trunk</connection>
+		<developerConnection>scm:svn:https://test.kuali.org/svn/modified_source/xapool-1.5.0/trunk</developerConnection>
+		<tag>HEAD</tag>
+		<url>https://test.kuali.org/svn/modified_source/xapool-1.5.0/trunk</url>
+	</scm>
+	<distributionManagement>
+		<repository>
+			<id>ssh-repository</id>
+			<url>scp://test.kuali.org:/opt/m2/repository</url>
+		</repository>		
+	</distributionManagement>
 </project>
