--- a/build.xml
+++ b/build.xml
@@ -60,6 +60,8 @@
 			<property name="impex.properties.file" value="${impex.properties.file}"/>
 		</ant>
 		<delete file="${log.file}" />
+		<!-- chb:debug -->	
+		<echoproperties/>
 	</target>
 	
 	<target name="dist-external" if="dist.external" depends="init-properties">
