Fixed impex build file name.
git-svn-id: https://svn.kuali.org/repos/foundation/db-utils/trunk@7156 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/export-to-svn/build.xml
+++ b/export-to-svn/build.xml
@@ -48,8 +48,8 @@
 				<expandproperties />
 			</filterchain>
 		</loadfile>
-		<echo message="${temp.dir}/db-impex-build.properties" />
-		<echo file="${temp.dir}/db-impex-build.properties" message="${impex.properties}" />
+		<echo message="${temp.dir}/impex-build.properties" />
+		<echo file="${temp.dir}/impex-build.properties" message="${impex.properties}" />
 		<!-- run export command -->
 		<!-- need to run in a separate JVM due to the way that Clover finds its configuration files. -->
 		<java classname="org.apache.tools.ant.Main"
