Fixing driver location
git-svn-id: https://svn.kuali.org/repos/foundation/db-utils/trunk@7157 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/export-to-svn/build.xml
+++ b/export-to-svn/build.xml
@@ -15,8 +15,8 @@
 	
 	<property file="ant-local.properties" />
 	<property file="ant.properties" />
-    <property name="drivers.dir" value="lib" />
-    <property name="checkout.dir" value="checkout" />
+    <property name="drivers.dir" location="lib" />
+    <property name="checkout.dir" location="checkout" />
 	
     <pathconvert property="temp.dir" targetos="unix">
         <path location="temp" />
