--- a/impex/build.properties
+++ b/impex/build.properties
@@ -82,6 +82,8 @@ export.start.table=
 #import.admin.password=
 #import.admin.url = jdbc:mysql://localhost:3306/
 
+export.table.name.filter=.*
+
 torque.sameJavaName = false
 torque.useClasspath=true
 
