--- a/impex/build.xml
+++ b/impex/build.xml
@@ -320,7 +320,15 @@ Note: Due to java native library classloader issues, the export routine (and pos
 		<property name="torque.schema.absolute.dir" location="${torque.schema.dir}" />
 		<!-- above works around a problem with torque-jdbc-transform getting passed a relative directory, and not working right if tbe process was started from a directory other than ant's basedir -->
 
-		<torque-jdbc-transform dbDriver="${export.torque.database.driver}" dbPassword="${export.torque.database.password}" dbSchema="${export.torque.database.schema}" dbType="${export.torque.database}" dbUrl="${export.torque.database.url}" dbUser="${export.torque.database.user}" outputFile="${torque.schema.absolute.dir}/schema.xml" />
+		<torque-jdbc-transform  dbDriver="${export.torque.database.driver}" 
+							    dbPassword="${export.torque.database.password}" 
+								dbSchema="${export.torque.database.schema}" 
+								dbType="${export.torque.database}" 
+								dbUrl="${export.torque.database.url}" 
+								dbUser="${export.torque.database.user}" 
+								outputFile="${torque.schema.absolute.dir}/schema.xml" 
+								tableNameRegex="${export.table.name.filter}"
+								/>
 		<copy file="database.dtd" todir="${torque.schema.dir}" />
 	</target>
 
@@ -352,6 +360,7 @@ Note: Due to java native library classloader issues, the export routine (and pos
 			databasePassword="${export.torque.database.password}" 
 			databaseType="${export.torque.database}"
 			excludedTables="${export.excluded.tables}"
+			tableNameRegex="${export.table.name.filter}"
 			startTableName="${export.start.table}"
 			outputDirectory="${torque.output.absolute.dir}" />
 
