Fixed checkout dir location.
git-svn-id: https://svn.kuali.org/repos/foundation/db-utils/trunk@7159 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/export-to-svn/build.xml
+++ b/export-to-svn/build.xml
@@ -41,8 +41,8 @@
 
 	<target name="export-db">
 		<!-- create impex-build.properties file -->
-		<property name="daily.export.dir" value="new_export"/>
-        <mkdir dir="${checkout.dir}/${daily.export.dir}"/>
+		<property name="daily.export.dir" location="${checkout.dir}/new_export"/>
+        <mkdir dir="${daily.export.dir}"/>
 		<loadfile property="impex.properties" srcfile="db-impex-build.properties">
 			<filterchain>
 				<expandproperties />
