Fixed checkout dir location.
git-svn-id: https://svn.kuali.org/repos/foundation/db-utils/trunk@7160 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/export-to-svn/db-impex-build.properties
+++ b/export-to-svn/db-impex-build.properties
@@ -17,7 +17,7 @@ torque.project = kfs
 #
 # the directory from which to read/write database XML files
 #
-torque.schema.dir=../${daily.export.dir}
+torque.schema.dir=${daily.export.dir}
 torque.sql.dir=${torque.schema.dir}/sql
 #
 # where to find JDBC drivers
