--- a/impex/src/org/apache/torque/default.properties
+++ b/impex/src/org/apache/torque/default.properties
@@ -84,6 +84,8 @@ torque.omzip.dir = ${torque.output.dir}
 torque.database.manualCreation = false
 torque.saveJavaName = false
 
+run.schema.sql.2=true
+truncate.data.sql.2=true
 
 # -------------------------------------------------------------------
 #
@@ -149,6 +151,7 @@ torque.template.idTable = sql/id-table/Control.vm
 torque.template.dataDtd = data/Control.vm
 torque.template.dataDump = data/dump/Control.vm
 torque.template.dataSql = sql/load/Control.vm
+torque.template.dataSql.notruncate = sql/load/ControlNT.vm
 torque.template.doc = doc/Control.vm
 torque.template.sqlDbInit = sql/db-init/Control.vm
 torque.template.ojb = ojb/repository/Control.vm
