--- a/kc/krdly30/deploy.cfg
+++ b/kc/krdly30/deploy.cfg
@@ -1,3 +1,3 @@
-svnLocation=rice/tags/1.0.x-KC-M4
+svnLocation=rice/tags/1.0.2-KC-05
 deployURL=test.kc.kuali.org:/opt/kc/krdly30/webapps/kr-dly30.war
 configURL=test.kc.kuali.org:~/kuali/rice/dly30/
