--- a/kc/kremb/deploy.cfg
+++ b/kc/kremb/deploy.cfg
@@ -1,3 +1,3 @@
-svnLocation=rice/tags/1.0.x-KC-M4
+svnLocation=rice/tags/1.0.2-KC-05
 deployURL=test.kc.kuali.org:/opt/kc/rice/webapps/kr-emb.war
 configURL=test.kc.kuali.org:~/kuali/rice/emb/
