--- a/kc/krwkly30/deploy.cfg
+++ b/kc/krwkly30/deploy.cfg
@@ -1,3 +1,3 @@
 svnLocation=rice/tags/1.0.2-KC-06
 deployURL=test.kc.kuali.org:/opt/kc/wkly30/webapps/kr-wkly30.war
-configURL=test.kc.kuali.org:~/kuali/rice/wkly30/
+configURL=test.kc.kuali.org:~/kuali/main/wkly30/
