Working on impex tool changes.
git-svn-id: https://svn.kuali.org/repos/foundation/db-utils/branches/clover-integration@7176 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/export-to-svn/ant.properties
+++ b/export-to-svn/ant.properties
@@ -1,10 +1,10 @@
 
-svn.base=
+svn.base=https://test.kuali.org/svn/
 svn.username=
 svn.password=
 
-data.svn.module=kfs-cfg-dbs
-data.svn.path=branches/impex-test-branch	
+data.svn.module=xxx-cfg-dbs
+data.svn.path=trunk	
 
 db.jdbc.url=
 db.username=
