--- a/impex/src/log4j.properties
+++ b/impex/src/log4j.properties
@@ -3,3 +3,5 @@ log4j.rootLogger=WARN, StdOut
 log4j.appender.StdOut=org.apache.log4j.ConsoleAppender
 log4j.appender.StdOut.layout=org.apache.log4j.PatternLayout
 log4j.appender.StdOut.layout.ConversionPattern=%d [%t] %-5p %c :: %m%n
+
+log4j.logger.org.jetel.connection.jdbc.specific.conn.DefaultConnection=ERROR
