--- a/impex/build.xml
+++ b/impex/build.xml
@@ -78,7 +78,7 @@ Note: Due to java native library classloader issues, the export routine (and pos
 	</target>
 
 	<property name="torque.contextProperties" value="build.properties" />
-	<property name="impex.properties.file" location="${user.home}/db-impex-build.properties" />
+	<property name="impex.properties.file" location="${user.home}/impex-build.properties" />
 	<property file="${impex.properties.file}" />
 	<property file="build.properties" />
 	<property name="torque.lib.dir" value="${lib.dir}" />
